# stock_market_recognition

./: CODEOWNERS  README.md  app_uml.plantuml  pyproject.toml
.github/workflows/: python-app.yml
stock_market_recognition/: app.py  check_if_code_works.py  main.py  model_parameter_tests.py  results.json  results_best.json  results_best_v1.json
stock_market_recognition/configuration/: .env  equipment.ini
stock_market_recognition/database/: auth_token.py  create_database.py  database.py  stock.db
stock_market_recognition/information_getter/: information_getter.py
stock_market_recognition/saved_models/: DELL.h5  GOOG.h5  MSFT.h5  model.h5  msft.h5
stock_market_recognition/static/: style.css
stock_market_recognition/stock_predict/: lstm_stock_predict.py  stock_predict_factory.py  stock_predict_interface.py
stock_market_recognition/stock_receiver/: stock_receiver_factory.py  stock_receiver_interface.py  yahoo_receiver.py
stock_market_recognition/stock_reciever/: stock_receiver_interface.py  yahoo_receiver.py
stock_market_recognition/strategy/: strategy_factory.py  strategy_interface.py
stock_market_recognition/templates/: fit_model.html  index.html  user.html
stock_market_recognition/wallet/: demo_wallet.py  wallet_factory.py  wallet_interface.py
tests/: test_api.py  test_prediction.py
