[tool.poetry]
name = "stock_market_recognition"
version = "0.1.0.dev"
description = ""
authors = ["Przemyslaw Lis"]
license = "MIT"
readme = "README.md"
#homepage = ""  TODO
repository = "https://github.com/LisPrzemyslaw/stock_market_recognition"
#documentation = ""  TODO
keywords = ["recognition", "stock market"]
classifiers = []

[tool.poetry.dependencies]
python = "^3.11"
pandas = "*"
numpy = "*"
yfinance = "*"
python-dotenv = "*"
SQLAlchemy = "*"
flask = "*"
tensorflow = "*"
keras = "*"
scikit-learn = "*"

[tool.poetry.group.dev.dependencies]
poetry = "^1.7.1"
isort = "^5.10.1"
black = "^23.1.0"
flake8 = "*"

[tool.black]
line-length = 180
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 180
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"