[tool.poetry]
name = "stock_market_recognition"
version = "0.1.0.dev"
description = ""
authors = ["Przemyslaw Lis"]
license = "MIT"
readme = "README.md"
#homepage = ""  TODO
repository = "https://github.com/LisPrzemyslaw/stock_market_recognition"
#documentation = ""  TODO
keywords = ["recognition", "stock market"]
classifiers = []

[tool.poetry.dependencies]
python = ">=3.11, <3.12"
pandas = "*"
numpy = "*"
yfinance = "*"
python-dotenv = "*"
SQLAlchemy = "*"
flask = "*"
tensorflow = "*"
tensorflow-io-gcs-filesystem = "0.31.0"
keras = "*"
scikit-learn = "*"
matplotlib = "*"

[tool.poetry.group.dev.dependencies]
poetry = "^1.7.1"
isort = "^5.10.1"
docsig = "^0.34.2"
pydocstringformatter = "^0.7.3"
black = "^24.3.0"
flake8 = "*"
flask_swagger_ui = "*"
pytest = "*"

[tool.black]
line-length = 180
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.flake8]
exclude = ['.venv', 'docs']
max-line-length = 120
ignore = ['E126', 'E202', 'E241', 'E266', 'E402', 'E501', 'E731', 'F401', 'F403', 'F405', 'F821', 'I100', 'I101', 'I201',
    'I202', 'W503', 'W605', 'Q000', 'Q001', 'Q002', 'Q003']
select = ['W391', 'W292', 'N803']
statistics = true
per-file-ignores = [
    'tests/*.py:N803',
]

[tool.isort]
profile = "black"
line_length = 180
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[tool.pydocstringformatter]
split-summary-body = false
max-line-length = 120
style = 'pep257'
strip-whitespaces = true
linewrap-full-docstring = true
final-period = false

[tool.pydocstringformatter.ignore]
patterns = ["tests/*"]

[tool.docsig]
check-dunders = true
check-overridden = false
check-protected = true
summary = true
disable = ["E113"]

[tool.docsig.ignore]
patterns = ["tests/*"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"